# playgame-dba

app/src/: audio.js  dialogo.js  index.html  main.js  perks-efectos.js  sprites.js  styles.css  subtrama.js  tutorial.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: db.rs  lib.rs
app/src-tauri/src/db/: hospital_arcangel.rs  mod.rs  postafeta.rs
app/src-tauri/src/economia/: mod.rs
app/src-tauri/src/guardado/: mod.rs
app/src-tauri/src/perks/: mod.rs
app/src-tauri/src/tickets/: hospital_arcangel.rs  mod.rs  postafeta.rs
app/src-tauri/src/turno/: mod.rs
app/src-tauri/src/validation/: correctness.rs  mentor.rs  mod.rs  practices.rs  speed.rs
docs/: query-path-gdd.md
docs/superpowers/plans/: 2026-07-12-fase0-01-esquema-datos.md  2026-07-12-fase0-02-motor-validacion.md  2026-07-12-fase0-03-generacion-tickets.md  2026-07-12-fase0-04-economia.md  2026-07-12-fase0-05-rpg-perks.md  2026-07-12-fase0-06-ui-loop.md  2026-07-13-fase0-07-ascenso-rango.md  2026-07-13-fase0-08-mini-boss-agencia.md  2026-07-13-fase0-09-pantallas-guardado.md  2026-07-13-fase0-10-vestido-visual.md  2026-07-13-fase0-11-animacion-audio.md  2026-07-13-fase0-12-hub-reskin-carpeta.md  2026-07-13-fase0-13-menu-pausa.md  2026-07-13-fase0-14-mapa-esquema.md  2026-07-14-fase0-15-tutorial-mentor.md  2026-07-14-fase0-16-tutorial-extendido.md  2026-07-14-fase0-17-intentos.md  2026-07-14-fase0-18-hud-feedback-arco-boss.md  2026-07-15-consola-scoring-presencia.md
docs/superpowers/specs/: 2026-07-11-01-vision-design.md  2026-07-11-02-core-gameplay-loop-design.md  (+37 more)
